bat.bool1.icyhot.IcyHot.scala.error
Compilation error:
IcyHot:5: error: ')' expected but 'return' found.
    return true
    ^IcyHot:9: error: ';' expected but 'else' found.
  else {
  ^